--- a/Tuts+ Todo/Base.lproj/Main.storyboard
+++ b/Tuts+ Todo/Base.lproj/Main.storyboard
@@ -25,13 +25,23 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="X6K-gB-zsE"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You don't have any Todo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pB-97-hUh">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="JTD-HM-ja2" secondAttribute="bottom" id="3rA-9N-76U"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4pB-97-hUh" secondAttribute="bottom" id="DVr-q5-LTM"/>
                             <constraint firstItem="JTD-HM-ja2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FbI-aw-Qyq"/>
                             <constraint firstItem="JTD-HM-ja2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="HHH-3q-PhT"/>
+                            <constraint firstItem="4pB-97-hUh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="LGm-FB-FmW"/>
                             <constraint firstAttribute="trailing" secondItem="JTD-HM-ja2" secondAttribute="trailing" id="Q9h-SA-DoN"/>
+                            <constraint firstAttribute="trailing" secondItem="4pB-97-hUh" secondAttribute="trailing" id="Udr-8p-9Ma"/>
+                            <constraint firstItem="4pB-97-hUh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Vtc-zL-Sno"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="sRU-Ws-U0Q">
@@ -42,6 +52,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="messageLabel" destination="4pB-97-hUh" id="o9s-RR-oCW"/>
                         <outlet property="tableView" destination="JTD-HM-ja2" id="aAY-SP-9JF"/>
                     </connections>
                 </viewController>
